--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,14 +16,30 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
 
+    - name: Set up NASM
+      run: |
+        curl -L -o nasm-2.15.05-installer.exe https://www.nasm.us/pub/nasm/releasebuilds/2.15.05/win64/nasm-2.15.05-installer.exe
+        ./nasm-2.15.05-installer.exe /S /D=C:\nasm
+      env:
+        PATH: C:\nasm;%PATH%
+
     - name: Download and Extract OpenSSL 3.4.0
       run: |
         curl -L -o openssl.tar.gz https://github.com/openssl/openssl/releases/download/openssl-3.4.0/openssl-3.4.0.tar.gz
         tar -xzf openssl.tar.gz
+
+    - name: Build OpenSSL 3.4.0
+      shell: cmd
+      run: |
+        # Set up Visual Studio environment for `nmake`
+        "C:\Program Files (x86)\Microsoft Visual Studio\Installer\vswhere.exe" -latest -products * -requires Microsoft.VisualStudio.Component.VC.Tools.x86.x64 -find VC\Auxiliary\Build\vcvars64.bat > temp.bat
+        call temp.bat
         cd openssl-3.4.0
         perl Configure VC-WIN64A no-shared no-zlib --prefix=C:/Lib/OpenSSL340-static
         nmake
         nmake install
+      env:
+        PATH: C:\nasm;%PATH%
 
     - name: Build and Install Static Qt 6.5.0
       run: |
