--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,18 +16,22 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
 
+    - name: Install Chocolatey
+      run: |
+        Set-ExecutionPolicy Bypass -Scope Process -Force; [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.SecurityProtocolType]::Tls12; Invoke-Expression ((New-Object System.Net.WebClient).DownloadString('https://chocolatey.org/install.ps1'))
+
+    - name: Install Strawberry Perl with Chocolatey
+      run: |
+        choco install strawberryperl -y
+      env:
+        PATH: C:\Strawberry\perl\bin;%PATH%
+
     - name: Download and Extract NASM
       run: |
         Invoke-WebRequest -Uri https://www.nasm.us/pub/nasm/releasebuilds/2.16/nasm-2.16.zip -OutFile nasm.zip
         Expand-Archive -Path nasm.zip -DestinationPath C:/nasm
       env:
         PATH: C:/nasm;%PATH%
-
-    - name: Install Strawberry Perl
-      run: |
-        choco install strawberryperl -y
-      env:
-        PATH: C:\Strawberry\perl\bin;%PATH%
 
     - name: Download and Extract OpenSSL 3.4.0
       run: |
