--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,12 +17,16 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Install Chocolatey
+      shell: powershell
       run: |
-        Set-ExecutionPolicy Bypass -Scope Process -Force; [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.SecurityProtocolType]::Tls12; Invoke-Expression ((New-Object System.Net.WebClient).DownloadString('https://chocolatey.org/install.ps1'))
+        Set-ExecutionPolicy Bypass -Scope Process -Force
+        [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.SecurityProtocolType]::Tls12
+        Invoke-Expression ((New-Object System.Net.WebClient).DownloadString('https://chocolatey.org/install.ps1'))
+        $env:PATH += ";$([System.Environment]::GetEnvironmentVariable('ProgramData'))\chocolatey\bin"
 
     - name: Install Strawberry Perl with Chocolatey
       run: |
-        choco install strawberryperl -y
+        C:\ProgramData\chocolatey\bin\choco install strawberryperl -y
       env:
         PATH: C:\Strawberry\perl\bin;%PATH%
 
