--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,14 +33,14 @@ jobs:
     - name: Download and Extract NASM
       run: |
         Invoke-WebRequest -Uri https://www.nasm.us/pub/nasm/releasebuilds/2.16/nasm-2.16.zip -OutFile nasm.zip
-        Expand-Archive -Path nasm.zip -DestinationPath C:/nasm
+        Expand-Archive -Path nasm.zip -DestinationPath C:\nasm
       env:
-        PATH: C:/nasm;%PATH%
+        PATH: C:\nasm;%PATH%
 
     - name: Verify NASM Installation
       run: |
-        C:/nasm/nasm -v
-
+        C:\nasm\nasm.exe -v || echo "NASM not found"
+      
     - name: Download and Extract OpenSSL 3.4.0
       run: |
         Invoke-WebRequest -Uri https://github.com/openssl/openssl/releases/download/openssl-3.4.0/openssl-3.4.0.tar.gz -OutFile openssl.tar.gz
