--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,25 +24,17 @@ jobs:
         Invoke-Expression ((New-Object System.Net.WebClient).DownloadString('https://chocolatey.org/install.ps1'))
         $env:PATH += ";$([System.Environment]::GetEnvironmentVariable('ProgramData'))\chocolatey\bin"
 
-    - name: Install Strawberry Perl with Chocolatey
+    - name: Install Strawberry Perl and NASM with Chocolatey
       run: |
         C:\ProgramData\chocolatey\bin\choco install strawberryperl -y
+        C:\ProgramData\chocolatey\bin\choco install nasm -y
       env:
         PATH: C:\Strawberry\perl\bin;%PATH%
 
-    - name: Download and Extract NASM
-      run: |
-        Invoke-WebRequest -Uri https://www.nasm.us/pub/nasm/releasebuilds/2.16/nasm-2.16.zip -OutFile nasm.zip
-        Expand-Archive -Path nasm.zip -DestinationPath C:\nasm
-        dir C:\nasm   # List contents of C:\nasm to check for nasm.exe
-      env:
-        PATH: C:\nasm;%PATH%
-
     - name: Verify NASM Installation
       run: |
-        dir C:\nasm
-        C:\nasm\nasm.exe -v || echo "NASM not found"
-      
+        nasm -v || echo "NASM not found"
+
     - name: Download and Extract OpenSSL 3.4.0
       run: |
         Invoke-WebRequest -Uri https://github.com/openssl/openssl/releases/download/openssl-3.4.0/openssl-3.4.0.tar.gz -OutFile openssl.tar.gz
@@ -54,7 +46,7 @@ jobs:
         REM Locate and call vcvars64.bat to set up Visual Studio environment
         for /f "tokens=*" %%i in ('"C:\ProgramData\chocolatey\bin\vswhere.exe" -latest -products * -requires Microsoft.VisualStudio.Component.VC.Tools.x86.x64 -find VC\Auxiliary\Build\vcvars64.bat') do set VCVARSPATH=%%i
         call "%VCVARSPATH%"
-        set PATH=C:\nasm;C:\Strawberry\perl\bin;%PATH%
+        set PATH=C:\Strawberry\perl\bin;%PATH%
         cd openssl-3.4.0
         perl Configure VC-WIN64A no-shared no-zlib --prefix=C:/Lib/OpenSSL340-static
         if exist Makefile (
