--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,13 +28,11 @@ jobs:
       run: |
         C:\ProgramData\chocolatey\bin\choco install strawberryperl -y
         C:\ProgramData\chocolatey\bin\choco install nasm -y
-      env:
-        PATH: C:\Strawberry\perl\bin;%PATH%
 
     - name: Verify NASM Installation
       run: |
-        nasm -v || echo "NASM not found"
-
+        C:\ProgramData\chocolatey\bin\nasm.exe -v || echo "NASM not found"
+      
     - name: Download and Extract OpenSSL 3.4.0
       run: |
         Invoke-WebRequest -Uri https://github.com/openssl/openssl/releases/download/openssl-3.4.0/openssl-3.4.0.tar.gz -OutFile openssl.tar.gz
@@ -46,7 +44,7 @@ jobs:
         REM Locate and call vcvars64.bat to set up Visual Studio environment
         for /f "tokens=*" %%i in ('"C:\ProgramData\chocolatey\bin\vswhere.exe" -latest -products * -requires Microsoft.VisualStudio.Component.VC.Tools.x86.x64 -find VC\Auxiliary\Build\vcvars64.bat') do set VCVARSPATH=%%i
         call "%VCVARSPATH%"
-        set PATH=C:\Strawberry\perl\bin;%PATH%
+        set PATH=C:\ProgramData\chocolatey\bin;C:\Strawberry\perl\bin;%PATH%
         cd openssl-3.4.0
         perl Configure VC-WIN64A no-shared no-zlib --prefix=C:/Lib/OpenSSL340-static
         if exist Makefile (
