fix build.yml error

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,26 +16,22 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
 
-    - name: Install Strawberry Perl with Chocolatey
+    - name: Install Chocolatey
       shell: powershell
       run: |
         Set-ExecutionPolicy Bypass -Scope Process -Force
         [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.SecurityProtocolType]::Tls12
         Invoke-Expression ((New-Object System.Net.WebClient).DownloadString('https://chocolatey.org/install.ps1'))
-        choco install strawberryperl -y
 
-    - name: Download and Set Up NASM
+    - name: Install Strawberry Perl and NASM
+      shell: powershell
       run: |
-        Invoke-WebRequest -Uri https://github.com/netwide-assembler/nasm/releases/download/2.16.01/nasm-2.16.01-win64.zip -OutFile nasm.zip
-        Expand-Archive -Path nasm.zip -DestinationPath C:\nasm
-        Move-Item C:\nasm\nasm-2.16.01\nasm.exe C:\nasm\nasm.exe
-      env:
-        PATH: C:\nasm;%PATH%
+        choco install strawberryperl nasm -y
 
     - name: Verify NASM Installation
       run: |
-        C:\nasm\nasm.exe -v || echo "NASM not found"
-      
+        nasm -v || echo "NASM not found"
+
     - name: Download and Extract OpenSSL 3.4.0
       run: |
         Invoke-WebRequest -Uri https://github.com/openssl/openssl/releases/download/openssl-3.4.0/openssl-3.4.0.tar.gz -OutFile openssl.tar.gz
@@ -47,7 +43,7 @@ jobs:
         REM Locate and call vcvars64.bat to set up Visual Studio environment
         for /f "tokens=*" %%i in ('"C:\ProgramData\chocolatey\bin\vswhere.exe" -latest -products * -requires Microsoft.VisualStudio.Component.VC.Tools.x86.x64 -find VC\Auxiliary\Build\vcvars64.bat') do set VCVARSPATH=%%i
         call "%VCVARSPATH%"
-        set PATH=C:\nasm;C:\Strawberry\perl\bin;%PATH%
+        set PATH=C:\Strawberry\perl\bin;%PATH%
         cd openssl-3.4.0
         perl Configure VC-WIN64A no-shared no-zlib --prefix=C:/Lib/OpenSSL340-static
         if exist Makefile (
