--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,11 +22,23 @@ jobs:
         Set-ExecutionPolicy Bypass -Scope Process -Force
         choco install cmake --installargs 'ADD_CMAKE_TO_PATH=System' -y
         choco install ninja -y
+
+    - name: Cache OpenSSL Installation
+      uses: actions/cache@v3
+      id: openssl-cache
+      with:
+        path: 'C:\Program Files\OpenSSL\'
+        key: ${{ runner.os }}-openssl-3.4.0
+
+    - name: Install OpenSSL with Chocolatey
+      if: steps.openssl-cache.outputs.cache-hit != 'true'
+      shell: powershell
+      run: |
         choco install openssl -y
 
     - name: Download Qt Online Installer
       run: |
-        Invoke-WebRequest -Uri https://download.qt.io/official_releases/online_installers/qt-unified-windows-x86-online.exe -OutFile qt-installer.exe
+        Invoke-WebRequest -Uri https://download.qt.io/official_releases/online_installers/qt-unified-windows-x64-online.exe -OutFile qt-installer.exe
 
     - name: Cache Qt Installation
       uses: actions/cache@v3
@@ -46,7 +58,7 @@ jobs:
 
     - name: Configure CMake
       run: |
-        cmake -B build -G "Ninja" -DCMAKE_PREFIX_PATH="$env:QT_MSVC2019_64" -DOPENSSL_ROOT_DIR="C:/Program Files/OpenSSL-Win64" .
+        cmake -B build -G "Ninja" -DCMAKE_PREFIX_PATH="$env:QT_MSVC2019_64" -DOPENSSL_ROOT_DIR="C:/Program Files/OpenSSL" .
 
     - name: Build Project
       run: |
