--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,8 +21,13 @@ jobs:
       run: |
         Set-ExecutionPolicy Bypass -Scope Process -Force
         choco install cmake --installargs 'ADD_CMAKE_TO_PATH=System' -y
-        choco install ninja -y
         choco install openssl -y
+
+    - name: Install Ninja (optional)
+      # Only if you plan to use Ninja with MSVC
+      shell: powershell
+      run: |
+        choco install ninja -y
 
     - name: Install Qt
       uses: jurplel/install-qt-action@v2
@@ -33,7 +38,9 @@ jobs:
     - name: Configure CMake
       shell: cmd
       run: |
-        cmake -B build -G "Ninja" -DCMAKE_PREFIX_PATH="%Qt6_DIR%" -DOPENSSL_ROOT_DIR="C:/Program Files/OpenSSL-Win64" .
+        cmake -B build -G "Visual Studio 16 2019" -A x64 ^
+          -DCMAKE_PREFIX_PATH="%Qt6_DIR%" ^
+          -DOPENSSL_ROOT_DIR="C:\Program Files\OpenSSL-Win64" .
 
     - name: Build Project
       shell: cmd
