--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,25 +16,40 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
 
-    - name: Install Dependencies with Chocolatey
+    - name: Install CMake
+      uses: lukka/get-cmake@v3
+      with:
+        cmakeVersion: '3.27.6'
+
+    - name: Download and Install OpenSSL
       shell: powershell
       run: |
-        Set-ExecutionPolicy Bypass -Scope Process -Force
-        choco install cmake --installargs 'ADD_CMAKE_TO_PATH=System' -y
-        choco install openssl -y
+        Invoke-WebRequest -Uri https://slproweb.com/download/Win64OpenSSL-3_1_1.msi -OutFile OpenSSL.msi
+        Start-Process msiexec.exe -Wait -ArgumentList '/i', 'OpenSSL.msi', '/qn', 'INSTALLDIR="C:\OpenSSL"'
+
+    - name: Verify OpenSSL Installation
+      shell: powershell
+      run: |
+        if (Test-Path -Path "C:\OpenSSL\include\openssl") {
+          Write-Host "OpenSSL headers found."
+        } else {
+          Write-Host "OpenSSL headers not found."
+          exit 1
+        }
 
     - name: Install Qt
       uses: jurplel/install-qt-action@v2
       with:
         version: '6.5.0'
-        arch: 'win64_msvc2019_64'
+        arch: 'win64_msvc2022_64'
 
     - name: Configure CMake
       shell: cmd
       run: |
         cmake -B build -G "Visual Studio 17 2022" -A x64 ^
           -DCMAKE_PREFIX_PATH="%Qt6_DIR%" ^
-          -DOPENSSL_ROOT_DIR="C:\Program Files\OpenSSL-Win64" .
+          -DOPENSSL_ROOT_DIR="C:\OpenSSL" ^
+          -DOPENSSL_USE_STATIC_LIBS=TRUE .
 
     - name: Build Project
       shell: cmd
