--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Install CMake
       uses: lukka/get-cmake@v2
       with:
-        cmakeVersion: '3.27.6'
+        cmake-version: '3.27.6'
 
     - name: Download and Install OpenSSL
       shell: powershell
