--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,26 +16,31 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
 
-    - name: Install CMake
-      uses: lukka/get-cmake@v2
+    - name: Set up CMake
+      uses: actions/setup-cmake@v3
       with:
-        cmake-version: '3.27.6'
+        cmake-version: '3.27.6'  # 指定所需的 CMake 版本
 
     - name: Download and Install OpenSSL
       shell: powershell
       run: |
         Invoke-WebRequest -Uri https://slproweb.com/download/Win64OpenSSL-3_1_1.msi -OutFile OpenSSL.msi
-        Start-Process msiexec.exe -Wait -ArgumentList '/i', 'OpenSSL.msi', '/qn', 'INSTALLDIR="C:\OpenSSL"'
+        Start-Process msiexec.exe -Wait -ArgumentList '/i', 'OpenSSL.msi', '/qn', 'INSTALLDIR="C:\Program Files\OpenSSL-Win64"'
 
     - name: Verify OpenSSL Installation
       shell: powershell
       run: |
-        if (Test-Path -Path "C:\OpenSSL\include\openssl") {
+        if (Test-Path -Path "C:\Program Files\OpenSSL-Win64\include\openssl") {
           Write-Host "OpenSSL headers found."
         } else {
           Write-Host "OpenSSL headers not found."
           exit 1
         }
+
+    - name: List OpenSSL Directory (Debug)
+      shell: powershell
+      run: |
+        Get-ChildItem "C:\Program Files\OpenSSL-Win64" -Recurse
 
     - name: Install Qt
       uses: jurplel/install-qt-action@v2
@@ -48,7 +53,10 @@ jobs:
       run: |
         cmake -B build -G "Visual Studio 17 2022" -A x64 ^
           -DCMAKE_PREFIX_PATH="%Qt6_DIR%" ^
-          -DOPENSSL_ROOT_DIR="C:\OpenSSL" ^
+          -DOPENSSL_ROOT_DIR="C:/Program Files/OpenSSL-Win64" ^
+          -DOPENSSL_INCLUDE_DIR="C:/Program Files/OpenSSL-Win64/include" ^
+          -DOPENSSL_CRYPTO_LIBRARY="C:/Program Files/OpenSSL-Win64/lib/libcrypto.lib" ^
+          -DOPENSSL_SSL_LIBRARY="C:/Program Files/OpenSSL-Win64/lib/libssl.lib" ^
           -DOPENSSL_USE_STATIC_LIBS=TRUE .
 
     - name: Build Project
