--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,14 +30,16 @@ jobs:
     - name: Install Qt
       uses: jurplel/install-qt-action@v2
       with:
-        version: '6.5.0'
+        version: '6.5.2'
+        host: 'windows'
+        target: 'desktop'
         arch: 'win64_msvc2022_64'
 
     - name: Configure CMake
       shell: cmd
       run: |
         cmake -B build -G "Visual Studio 17 2022" -A x64 ^
-          -DCMAKE_TOOLCHAIN_FILE=C:/vcpkg/scripts/buildsystems/vcpkg.cmake ^
+          -DCMAKE_TOOLCHAIN_FILE=C:\vcpkg\scripts\buildsystems\vcpkg.cmake ^
           -DCMAKE_PREFIX_PATH="%Qt6_DIR%" ^
           -DOPENSSL_USE_STATIC_LIBS=TRUE .
 
