--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build aestest with precompiled Qt
+name: Build aestest with precompiled Qt (VS2022)
 
 on:
   push:
@@ -10,7 +10,7 @@ on:
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: windows-2022  # Use the Windows 2022 runner
 
     steps:
     - name: Checkout repository
@@ -30,7 +30,7 @@ jobs:
     - name: Install Qt
       uses: jurplel/install-qt-action@v2
       with:
-        version: '6.5.2'
+        version: '6.5.2'    # Ensure this version is available
         host: 'windows'
         target: 'desktop'
         arch: 'win64_msvc2022_64'
