--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build aestest with precompiled Qt (VS2022)
+name: Build aestest with precompiled Qt
 
 on:
   push:
@@ -10,7 +10,7 @@ on:
 
 jobs:
   build:
-    runs-on: windows-2022  # Use the Windows 2022 runner
+    runs-on: windows-2022  # Use Windows 2022 runner for Visual Studio 2022
 
     steps:
     - name: Checkout repository
@@ -30,15 +30,16 @@ jobs:
     - name: Install Qt
       uses: jurplel/install-qt-action@v2
       with:
-        version: '6.5.2'    # Ensure this version is available
+        version: '6.5.2'                # Ensure this version is available
         host: 'windows'
         target: 'desktop'
-        arch: 'win64_msvc2022_64'
+        arch: 'win64_msvc2019_64'       # Use a valid architecture
+        modules: 'qtbase'               # Specify modules if necessary
 
     - name: Configure CMake
       shell: cmd
       run: |
-        cmake -B build -G "Visual Studio 17 2022" -A x64 ^
+        cmake -B build -G "Visual Studio 16 2019" -A x64 ^
           -DCMAKE_TOOLCHAIN_FILE=C:\vcpkg\scripts\buildsystems\vcpkg.cmake ^
           -DCMAKE_PREFIX_PATH="%Qt6_DIR%" ^
           -DOPENSSL_USE_STATIC_LIBS=TRUE .
